# fm

./: .gitignore  README.org  build.sh  format.sh  info.rkt  main.rkt  tensor.rkt
C/: CMakeLists.txt  aux.c  aux.rkt
internal/: utilities.rkt
unsafe/: cblas.rkt  tensor.rkt
